apps/podvader/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  labels:
    app: http-server
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: default-conf
          configMap:
            name: default-conf
        - name: cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: pid
          emptyDir: {}
      containers:
        - name: http-server
          image: ghcr.io/npastorale/podvader:0.0.1@sha256:a6d4ba2be43076c38560cc52770284ca35f8f384f37c54694ca391ba6128a560
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: default-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: cache
              mountPath: /var/cache/nginx
            - name: tmp
              mountPath: /tmp/nginx
            - name: pid
              mountPath: /var/run
