apps/podvader/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podvader-https
spec:
  hostnames:
    - podvader.com
    - www.podvader.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: podvader
      namespace: podvader
      sectionName: https
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: podvader
      namespace: podvader
      sectionName: www-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: http-server
          port: 80
          weight: 1
